# todo_app

./: 20250811_login_fix.tsx  20250811_todos_fix.tsx  README.md  package-lock.json  settings.md
backend/: .env  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0dfaf26e9186_first_migration.py  49082ed5b16f_third_migrate.py  5ac3ae424dd8_second_migrate.py  72015747024a_5th_migrate.py  a83f656c665c_4th_migrate.py
backend/v1/: main.py
backend/v1/api/: deps.py
backend/v1/api/routes/: auth.py  todos.py  users.py
backend/v1/core/: config.py  security.py
backend/v1/crud/: base.py  todo.py  user.py
backend/v1/db/: init_db.py  session.py
backend/v1/models/: GenericSchema.py  Todo.py  User.py
frontend/: .env  package-lock.json  package.json
frontend/app/: root.tsx  routes.ts
frontend/app/components/: CommonLink.tsx  ConfirmDialog.tsx  DateTimePicker24.tsx  DeleteUserButton.tsx  Footer.tsx  Header.tsx  TodoAddForm.tsx  TodoItem.tsx  TodoList.tsx  TodoSearch.tsx  UserSearch.tsx
frontend/app/components/ui/: calendar.tsx
frontend/app/data/: auth.server.ts  session.server.ts  todo.server.ts
frontend/app/routes/: login.tsx  logout.tsx  signup.tsx  todos.tsx
frontend/app/todo/: todo_uuid.tsx
frontend/app/type/: auth.ts  todo.ts
frontend/app/user/: user_uuid.tsx  users.tsx
